--- a/NOAA_CIMSS_Histogram_Analyses.ipynb
+++ b/NOAA_CIMSS_Histogram_Analyses.ipynb
@@ -33,10 +33,10 @@
     "import scipy.stats as st\n",
     "import itertools\n",
     "import pandas as pd\n",
-    "npPath = '/sharedData/scratch/all_npy3/'\n",
-    "ncPath = '/sharedData/scratch/april_data/'\n",
-    "acmPath = '/sharedData/scratch/all_npy3/'\n",
-    "DATAPATH = '/sharedData/scratch/'\n",
+    "# npPath = '/sharedData/scratch/all_npy3/'\n",
+    "# ncPath = '/sharedData/scratch/april_data/'\n",
+    "# acmPath = '/sharedData/scratch/all_npy3/'\n",
+    "# DATAPATH = '/sharedData/scratch/'\n",
     "import re\n",
     "import os\n",
     "from os import path as op\n",
@@ -45,9 +45,6 @@
     "import xarray as xr\n",
     "import netCDF4\n",
     "from pathlib import Path\n",
-    "\n",
-    "#refactor to create folders using subprocess library\n",
-    "#from subprocess import\n",
     "\n",
     "import matplotlib.dates as mdates\n",
     "from datetime import datetime"
@@ -132,10 +129,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "template = '''\\\n",
+    "    http://home.chpc.utah.edu/~u0553130/Brian_Blaylock/cgi-bin/\\\n",
+    "    goes16_download.cgi?source=aws&satellite=\\\n",
+    "    noaa-goes{SS}&domain=F&product=ABI-L1b-Rad&date=20{yy}-{mm}-{dd}&hour={hr}           \n",
+    "    '''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"    http://home.chpc.utah.edu/~u0553130/Brian_Blaylock/cgi-bin/    goes16_download.cgi?source=aws&satellite=    noaa-goes{SS}&domain=F&product=ABI-L1b-Rad&date=20{yy}-{mm}-{dd}&hour={hr}'            \\n    \""
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "template"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "template = 'http://home.chpc.utah.edu/~u0553130/Brian_Blaylock/cgi-bin/'   \\\n",
+    "    + 'goes16_download.cgi?source=aws&satellite=' \\\n",
+    "    + 'noaa-goes{SS}&domain=F&product=ABI-L1b-Rad&date=20{yy}-{mm}-{dd}&hour={hr}'"
+   ]
   },
   {
    "cell_type": "code",
