iterate over netcdf pairs to npy WIP

--- a/NOAA_CIMSS_Histogram_Analyses.ipynb
+++ b/NOAA_CIMSS_Histogram_Analyses.ipynb
@@ -37,8 +37,10 @@
     "# ncPath = '/sharedData/scratch/april_data/'\n",
     "# acmPath = '/sharedData/scratch/all_npy3/'\n",
     "# DATAPATH = '/sharedData/scratch/'\n",
+    "import requests\n",
     "import re\n",
     "import os\n",
+    "#import os.path as op\n",
     "from os import path as op\n",
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
@@ -121,6 +123,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def listurls(prefix,html):\n",
+    "    from bs4 import BeautifulSoup\n",
+    "    soup = BeautifulSoup(html.text)\n",
+    "    urllist = [elt['href'] for elt in soup.find_all(href=re.compile(prefix))]\n",
+    "    return urllist"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -166,9 +181,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "template = 'http://home.chpc.utah.edu/~u0553130/Brian_Blaylock/cgi-bin/'   \\\n",
+    "templateURL = 'http://home.chpc.utah.edu/~u0553130/Brian_Blaylock/cgi-bin/'   \\\n",
     "    + 'goes16_download.cgi?source=aws&satellite=' \\\n",
-    "    + 'noaa-goes{SS}&domain=F&product=ABI-L1b-Rad&date=20{yy}-{mm}-{dd}&hour={hr}'"
+    "    + 'noaa-goes{SS}&domain=F&product=ABI-L1b-Rad&date=20{yy}-{mm}-{dd}&hour={hr}'\n",
+    "Sat = 16\n",
+    "band = 8\n",
+    "year = 2020\n",
+    "month = 1\n",
+    "day = 1\n",
+    "hour = 0\n",
+    "\n",
+    "\n",
+    "search = itertools.product(Sat, band, year, month, day, hour)"
    ]
   },
   {
@@ -177,30 +201,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for i in [8]:\n",
-    "    for j in range(11):\n",
-    "        band = str(i).zfill(2)\n",
-    "        date = 98 + j\n",
-    "        day = str(date).zfill(3)\n",
+    "#check for GOES-16 and GOES-17 and plot what is available\n",
+    "for SS, bb, yy, mm, dd, hr in search:\n",
+    "    SS, bb, yy, mm, dd, hr =        \n",
+    "        str(SS).zfill(2),\n",
+    "        str(bb).zfill(2),\n",
+    "        str(yy).zfill(4),\n",
+    "        str(mm).zfill(2),\n",
+    "        str(dd).zfill(2),\n",
+    "        str(hr).zfill(2)\n",
     "        \n",
-    "        times17, mean17 = getTmean('17', npPath, band, day)\n",
-    "        times16, mean16 = getTmean('16', npPath, band, day)\n",
-    "        \n",
-    "        ptimes17 = [datetime.strptime(f\"2019{t}\", \"%Y%j%H%M\") for t in times17]\n",
-    "        ptimes16 = [datetime.strptime(f\"2019{t}\", \"%Y%j%H%M\") for t in times16]\n",
-    "        fig, ax1 = plt.subplots(figsize=(15,5))#constrained_layout=False\n",
-    "        _ = ax1.plot_date(ptimes17, mean17 , label=\"GOES-17\", color='tab:red', marker='+', markersize = 16)\n",
-    "        _ = ax1.plot_date(ptimes16, mean16 , label='GOES-16', color='tab:blue', marker='+', markersize = 16, zorder=-1)\n",
-    "        _ = ax1.set_ylim(220,260)\n",
-    "        _ = ax1.tick_params('both', labelsize=18)\n",
-    "        _ = ax1.legend()\n",
-    "        _ = ax1.set_title(f'Mean Temperatures (K) for a 401 x 1001 Portion\\n of Band 08 on 04-{str(8+j)}-2019', fontweight ='bold', fontsize = 22)\n",
-    "        _ = ax1.set_ylabel('Temperature (K)',fontsize = 16)\n",
-    "        _ = ax1.set_xlabel('time (hours)',fontsize = 16)\n",
-    "        _ = ax1.xaxis.set_major_formatter(mdates.DateFormatter('%H:%M'))\n",
-    "        \n",
-    "        \n",
-    "        _ = plt.savefig('..'+ op.join(DATAPATH,f\"Mean_temp_unfiltered/04-{str(8+j).zfill(2)}-2019\"))\n"
+    "    '''Get URLS for download'''    \n",
+    "    req16 = requests.get(templateURL)\n",
+    "    SS = '17'\n",
+    "    req17 = requests.get(templateURL)\n",
+    "    if yy == '2018':\n",
+    "        product = '3'\n",
+    "    else:\n",
+    "        product = '6'\n",
+    "    prefix = f\"OR_ABI-L1b-RadF-M{product}C\" + bb\n",
+    "    prefix.format(**{'product':product})\n",
+    "    bandURLList16 = listurls(prefix,req16)\n",
+    "    bandURLList17 = listurls(prefix,req17)\n",
+    "    \n",
+    "    '''iterate over pairs of GOES NETCDF, download, and convert to numpy'''\n",
+    "    #Last string chars are of this format: c20192220009464.nc\n",
+    "    \n",
+    "    '''Create subplot figures and save'''\n",
+    "#     times17, mean17 = getTmean('17', npPath, band, day)\n",
+    "#     times16, mean16 = getTmean('16', npPath, band, day)\n",
+    "\n",
+    "#     ptimes17 = [datetime.strptime(f\"2019{t}\", \"%Y%j%H%M\") for t in times17]\n",
+    "#     ptimes16 = [datetime.strptime(f\"2019{t}\", \"%Y%j%H%M\") for t in times16]\n",
+    "#     fig, ax1 = plt.subplots(figsize=(15,5))#constrained_layout=False\n",
+    "#     _ = ax1.plot_date(ptimes17, mean17 , label=\"GOES-17\", color='tab:red', marker='+', markersize = 16)\n",
+    "#     _ = ax1.plot_date(ptimes16, mean16 , label='GOES-16', color='tab:blue', marker='+', markersize = 16, zorder=-1)\n",
+    "#     _ = ax1.set_ylim(220,260)\n",
+    "#     _ = ax1.tick_params('both', labelsize=18)\n",
+    "#     _ = ax1.legend()\n",
+    "#     _ = ax1.set_title(f'Mean Temperatures (K) for a 401 x 1001 Portion\\n of Band 08 on 04-{str(8+j)}-2019', fontweight ='bold', fontsize = 22)\n",
+    "#     _ = ax1.set_ylabel('Temperature (K)',fontsize = 16)\n",
+    "#     _ = ax1.set_xlabel('time (hours)',fontsize = 16)\n",
+    "#     _ = ax1.xaxis.set_major_formatter(mdates.DateFormatter('%H:%M'))\n",
+    "\n",
+    "\n",
+    "#     _ = plt.savefig('..'+ op.join(DATAPATH,f\"Mean_temp_unfiltered/04-{str(8+j).zfill(2)}-2019\"))\n"
    ]
   }
  ],
