test script for npy; Histrogram subplot WIP

--- a/Miscellaneous/NetCDF_download/Download_script.ipynb
+++ b/Miscellaneous/NetCDF_download/Download_script.ipynb
@@ -18,11 +18,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def download(filename,toPath):\n",
+    "def download(filename,toPath,saveName):\n",
     "    with open(filename, 'r') as fid:\n",
     "        txt = fid.read()\n",
     "    urls = txt.split()\n",
-    "    cmdlist = [ 'wget -nc -c ' + url +' -P ' + toPath for url in urls ]#if re.search('C07',url)\n",
+    "    cmdlist = [ 'wget -nc -c ' + url +' -P ' + toPath +'-O '+saveName for url in urls ]#if re.search('C07',url)\n",
     "    print(len(urls),len(list(set(urls))),len(cmdlist))\n",
     "\n",
     "    for url, cmd in zip(urls, cmdlist):\n",
