--- a/NOAA_CIMSS_Histogram_Analyses.ipynb
+++ b/NOAA_CIMSS_Histogram_Analyses.ipynb
@@ -16,18 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 55,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/scratch/adomakor412/conda/envs/MyEnv/lib/python3.6/site-packages/dask/config.py:131: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
-      "  data = yaml.load(f.read()) or {}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import scipy.stats as st\n",
@@ -47,6 +38,7 @@
     "import xarray as xr\n",
     "import netCDF4\n",
     "from pathlib import Path\n",
+    "from subprocess import Popen\n",
     "\n",
     "import matplotlib.dates as mdates\n",
     "from datetime import datetime"
@@ -54,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,6 +128,112 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def create_nc_Numpy(ncFile, pathOut):\n",
+    "    myFile = xr.open_dataset(ncFile)\n",
+    "    dat = myFile.metpy.parse_cf('Rad')\n",
+    "    geos = dat.metpy.cartopy_crs\n",
+    "\n",
+    "    cartopy_extent_goes = geos.x_limits + geos.y_limits\n",
+    "    pyresample_extent_goes = (cartopy_extent_goes[0],\n",
+    "                                cartopy_extent_goes[2],\n",
+    "                                cartopy_extent_goes[1],\n",
+    "                                cartopy_extent_goes[3])\n",
+    "    goes_params = geos.proj4_params\n",
+    "    rad = dat.data\n",
+    "    \n",
+    "    def normIm(im,gamma=1.0,reverse=False):\n",
+    "        nim = ((im-np.nanmin(im))*(np.nanmax(im)-np.nanmin(im))**(-1))\n",
+    "        if reverse:#want clouds to be white\n",
+    "            nim = (1.0-nim**(gamma))\n",
+    "        return nim\n",
+    "    \n",
+    "    def goes_2_roi(geos_crs, \n",
+    "               target_extent,\n",
+    "               target_rows,#actual length or base\n",
+    "               target_cols,#actual width or height\n",
+    "               cartopy_target_proj,\n",
+    "               data_key='Rad',\n",
+    "               radius_of_influence=50000):\n",
+    "        \"\"\"Function that goes from loaded GOES data to data resampled in a projection for an extent\"\"\"\n",
+    "        cartopy_source_extent = geos_crs.x_limits + geos_crs.y_limits\n",
+    "        pyresample_source_extent = (cartopy_source_extent[0],\n",
+    "                                    cartopy_source_extent[2],\n",
+    "                                    cartopy_source_extent[1],\n",
+    "                                    cartopy_source_extent[3])\n",
+    "        rad = dat.data\n",
+    "        source_area = geometry.AreaDefinition('GOES-1X', 'Full Disk','GOES-1X', \n",
+    "                                              geos_crs.proj4_params,\n",
+    "                                              rad.shape[1], rad.shape[0],\n",
+    "                                              pyresample_source_extent)\n",
+    "        area_target_def = geometry.AreaDefinition('areaTest', 'Target Region', 'areaTest',\n",
+    "                                            cartopy_target_proj.proj4_params,\n",
+    "                                            target_rows, target_cols,\n",
+    "                                            target_extent)\n",
+    "        geos_con_nn = image.ImageContainerNearest(rad, \n",
+    "                                                source_area, \n",
+    "                                                radius_of_influence=radius_of_influence)\n",
+    "\n",
+    "        # Here we are using pyresample for the remapping\n",
+    "        area_proj_con_nn = geos_con_nn.resample(area_target_def)\n",
+    "        return area_proj_con_nn.image_data\n",
+    "        \n",
+    "    def cartopy_pyresample_toggle_extent(input_extent):\n",
+    "        return np.array(input_extent)[np.array([0,2,1,3])]\n",
+    "\n",
+    "    def transform_cartopy_extent(source_extent,source_proj, target_proj):\n",
+    "        target_extent = target_proj.transform_points(source_proj, \n",
+    "                                                     np.array(source_extent[:2]),\n",
+    "                                                     np.array(source_extent[2:])).ravel()\n",
+    "        # target_extent in 3D, must be in 2D\n",
+    "        return cartopy_pyresample_toggle_extent(np.array(target_extent)[np.array([0,1,3,4])])\n",
+    "    pc = ccrs.PlateCarree()\n",
+    "    mc = ccrs.Mercator()\n",
+    "\n",
+    "    # Convert extent from pc to mc (both cylindrical projections)\n",
+    "    extent_pc = [-109.59326, -102.40674, 8.94659, -8.94656]\n",
+    "    \n",
+    "    target_extent_mc_cartopy = transform_cartopy_extent(extent_pc, pc, mc)\n",
+    "    target_extent_mc_pyresample = cartopy_pyresample_toggle_extent(target_extent_mc_cartopy)\n",
+    "    \n",
+    "    roi_rads = goes_2_roi(geos,\n",
+    "               target_extent_mc_pyresample,\n",
+    "               401,1001,\n",
+    "               mc)\n",
+    "    ####\n",
+    "    full_filename = op.join(pathOut,ncFile[:-3])\n",
+    "    np.save(full_filename,roi_rads)\n",
+    "    myFile.close()\n",
+    "    return"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def download(filename,toPath, saveName):\n",
+    "    with open(filename, 'r') as fid:\n",
+    "        txt = fid.read()\n",
+    "    urls = txt.split()\n",
+    "    cmdlist = [ 'wget ' + url +' -P ' + toPath for url in urls +' -O '+ saveName]#if re.search('C07',url)\n",
+    "    print(len(urls),len(list(set(urls))),len(cmdlist))\n",
+    "\n",
+    "    for url, cmd in zip(urls, cmdlist):\n",
+    "        print(cmd)\n",
+    "        if op.exists(url):\n",
+    "            continue\n",
+    "        pid = Popen(cmd, shell=True)\n",
+    "        pid.communicate()\n",
+    "    return"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -144,40 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "template = '''\\\n",
-    "    http://home.chpc.utah.edu/~u0553130/Brian_Blaylock/cgi-bin/\\\n",
-    "    goes16_download.cgi?source=aws&satellite=\\\n",
-    "    noaa-goes{SS}&domain=F&product=ABI-L1b-Rad&date=20{yy}-{mm}-{dd}&hour={hr}           \n",
-    "    '''"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "\"    http://home.chpc.utah.edu/~u0553130/Brian_Blaylock/cgi-bin/    goes16_download.cgi?source=aws&satellite=    noaa-goes{SS}&domain=F&product=ABI-L1b-Rad&date=20{yy}-{mm}-{dd}&hour={hr}'            \\n    \""
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "template"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +257,7 @@
     "hour = 0\n",
     "\n",
     "\n",
-    "search = itertools.product(Sat, band, year, month, day, hour)"
+    "search = itertools.product([Sat], [band], [year], [month], [day], [hour])"
    ]
   },
   {
@@ -221,13 +286,47 @@
     "        product = '6'\n",
     "    prefix = f\"OR_ABI-L1b-RadF-M{product}C\" + bb\n",
     "    prefix.format(**{'product':product})\n",
-    "    bandURLList16 = listurls(prefix,req16)\n",
+    "    bandURLList16 = listurls(prefix,req16)#list of strings using beautiful soup\n",
     "    bandURLList17 = listurls(prefix,req17)\n",
+    "    bandURLList16.sort()\n",
+    "    bandURLList17.sort()\n",
     "    \n",
+    "    cnt = 0 #keep a counter to avoid crossing FD with similar file names and performance\n",
     "    '''iterate over pairs of GOES NETCDF, download, and convert to numpy'''\n",
-    "    #Last string chars are of this format: c20192220009464.nc\n",
-    "    \n",
-    "    '''Create subplot figures and save'''\n",
+    "    for i, FD16 in enumerate(req16): #Last string chars are of this format: c20192220009464.nc\n",
+    "        cYYYYDDDHHt = FD[-18:-9]\n",
+    "        for FD17 in req17[cnt:i]:\n",
+    "            if FD16[-18:-9] == FD17[-18:-9]:\n",
+    "                cnt +=1\n",
+    "                f17 = open(FD17,'w')\n",
+    "                download(op.join('buffer', f17),'buffer','nc17')\n",
+    "                npy17 = create_nc_Numpy(op.join('buffer', 'nc17'), 'buffer')\n",
+    "                f17.close()\n",
+    "                #break\n",
+    "            f16 = open(FD17,'w')\n",
+    "            download(op.join('buffer', f16),'buffer','nc16')\n",
+    "            npy16 = create_nc_Numpy(op.join('buffer', 'nc16'), 'buffer')\n",
+    "            f16.close()\n",
+    " \n",
+    "        '''Create subplot figures and save'''\n",
+    "        fig, (ax1, ax2, ax3, ax4) = plt.subplots(2, 2)\n",
+    "        \n",
+    "        '''Histograms'''\n",
+    "#         ax.set_title(f'{hh}:{mm}')\n",
+    "#                 ax.set_ylabel('density (unitless)',fontsize = 16)\n",
+    "#                 ax.set_xlabel('Temperature (K)', fontsize = 16)\n",
+    "\n",
+    "#                 Tbox = Rad2BT(imageBox, planck_fk1, planck_fk2, planck_bc1, planck_bc2)\n",
+    "#                 ax.hist(Tbox.ravel(), bins = bins, density = True, label = 'Temp dist.')\n",
+    "#                 #ax.plot([T,T], [0,0.3],'r', label = 'something')\n",
+    "#                 ax.axvline(T, color='r',label = 'NOAA avg.')\n",
+    "#             axes[0].legend(loc='upper left')\n",
+    "#         fig.savefig('..'+ op.join(DATAPATH,f\"Histograms_filtered/G_{SS}_04-{str(8+dd).zfill(2)}-2019\"))\n",
+    "        \n",
+    "        '''ECDF'''\n",
+    "        \n",
+    "        '''AUC'''\n",
+    "        \n",
     "#     times17, mean17 = getTmean('17', npPath, band, day)\n",
     "#     times16, mean16 = getTmean('16', npPath, band, day)\n",
     "\n",
@@ -247,6 +346,82 @@
     "\n",
     "#     _ = plt.savefig('..'+ op.join(DATAPATH,f\"Mean_temp_unfiltered/04-{str(8+j).zfill(2)}-2019\"))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "string = 'c20192220009464.nc'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "18"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c20192220'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string[-18:-9]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'c20192220009464.nc'"
+      ]
+     },
+     "execution_count": 70,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string[:100]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
