pipeline for panels, debug output WIP

--- a/NOAA_CIMSS_Histogram_Analyses.ipynb
+++ b/NOAA_CIMSS_Histogram_Analyses.ipynb
@@ -16,9 +16,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/scratch/adomakor412/conda/envs/MyEnv/lib/python3.6/site-packages/dask/config.py:131: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
+      "  data = yaml.load(f.read()) or {}\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import scipy.stats as st\n",
@@ -46,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -242,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,24 +271,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "#check for GOES-16 and GOES-17 and plot what is available\n",
+    "bins = np.linspace(220,250,101)\n",
+    "\n",
     "for SS, bb, yy, mm, dd, hr in search:\n",
-    "    SS, bb, yy, mm, dd, hr =        \n",
-    "        str(SS).zfill(2),\n",
-    "        str(bb).zfill(2),\n",
-    "        str(yy).zfill(4),\n",
-    "        str(mm).zfill(2),\n",
-    "        str(dd).zfill(2),\n",
+    "    SS, bb, yy, mm, dd, hr = \\\n",
+    "        str(SS).zfill(2),\\\n",
+    "        str(bb).zfill(2),\\\n",
+    "        str(yy).zfill(4),\\\n",
+    "        str(mm).zfill(2),\\\n",
+    "        str(dd).zfill(2),\\\n",
     "        str(hr).zfill(2)\n",
     "        \n",
     "    '''Get URLS for download'''    \n",
     "    req16 = requests.get(templateURL)\n",
     "    SS = '17'\n",
     "    req17 = requests.get(templateURL)\n",
+    "    \n",
+    "    print(req16, file='log_Histogram.txt')\n",
+    "    #logger.info(str(ncf))\n",
+    "    \n",
     "    if yy == '2018':\n",
     "        product = '3'\n",
     "    else:\n",
@@ -293,39 +308,95 @@
     "    \n",
     "    cnt = 0 #keep a counter to avoid crossing FD with similar file names and performance\n",
     "    '''iterate over pairs of GOES NETCDF, download, and convert to numpy'''\n",
-    "    for i, FD16 in enumerate(req16): #Last string chars are of this format: c20192220009464.nc\n",
-    "        cYYYYDDDHHt = FD[-18:-9]\n",
-    "        for FD17 in req17[cnt:i]:\n",
-    "            if FD16[-18:-9] == FD17[-18:-9]:\n",
+    "    for i, FD16 in enumerate(bandURLList16): #Last string chars are of this format: c20192220009464.nc\n",
+    "        cYYYYDDDHHt = FD16[-18:-7]\n",
+    "        t = FD16[-7]\n",
+    "        for FD17 in bandURLList17[cnt:i]:\n",
+    "            if cYYYYDDDHHt == FD17[-18:-7]:\n",
     "                cnt +=1\n",
     "                f17 = open(FD17,'w')\n",
     "                download(op.join('buffer', f17),'buffer','nc17')\n",
     "                npy17 = create_nc_Numpy(op.join('buffer', 'nc17'), 'buffer')\n",
     "                f17.close()\n",
-    "                #break\n",
-    "            f16 = open(FD17,'w')\n",
-    "            download(op.join('buffer', f16),'buffer','nc16')\n",
-    "            npy16 = create_nc_Numpy(op.join('buffer', 'nc16'), 'buffer')\n",
-    "            f16.close()\n",
+    "                \n",
+    "                '''Load numpy files'''\n",
+    "                imageBox_17 = np.load('buffer/nc17.npy')\n",
+    "                myFile_17 = xr.open_dataset('buffer/nc17.nc')\n",
+    "                planck_fk1 = float(myFile_17['planck_fk1'].data)\n",
+    "                planck_fk2 = float(myFile_17['planck_fk2'].data) \n",
+    "                planck_bc1 = float(myFile_17['planck_bc1'].data)                       \n",
+    "                planck_bc2 = float(myFile_17['planck_bc2'].data)\n",
+    "                break\n",
+    "        f16 = open(FD16,'w')\n",
+    "        download(op.join('buffer', f16),'buffer','nc16')\n",
+    "        npy16 = create_nc_Numpy(op.join('buffer', 'nc16'), 'buffer')\n",
+    "        f16.close()\n",
+    "        \n",
+    "        '''Load numpy files'''\n",
+    "        imageBox_16 = np.load('buffer/nc16.npy')\n",
+    "        myFile_16 = xr.open_dataset('buffer/nc16.nc')\n",
+    "        planck_fk1_16 = float(myFile_16['planck_fk1'].data)\n",
+    "        planck_fk2_16 = float(myFile_16['planck_fk2'].data) \n",
+    "        planck_bc1_16 = float(myFile_16['planck_bc1'].data)                       \n",
+    "        planck_bc2_16 = float(myFile_16['planck_bc2'].data)\n",
     " \n",
     "        '''Create subplot figures and save'''\n",
     "        fig, (ax1, ax2, ax3, ax4) = plt.subplots(2, 2)\n",
     "        \n",
     "        '''Histograms'''\n",
-    "#         ax.set_title(f'{hh}:{mm}')\n",
-    "#                 ax.set_ylabel('density (unitless)',fontsize = 16)\n",
-    "#                 ax.set_xlabel('Temperature (K)', fontsize = 16)\n",
+    "        ax1.set_title(f'GOES-16 ABI Band {bb} Day {mm}-{dd} {hh}:{t}0')\n",
+    "        ax1.set_ylabel('density (unitless)',fontsize = 16)\n",
+    "        ax1.set_xlabel('Temperature (K)', fontsize = 16)\n",
+    "        Tbox16 = Rad2BT(imageBox_16, planck_fk1_16, planck_fk2_16, planck_bc1_16, planck_bc2_16)\n",
+    "        ax1.hist(Tbox16.ravel(), bins = bins, density = True, label = 'Temp dist.')\n",
+    "        ax1.axvline(Tbox16.mean(), color='r',label = 'NOAA avg.')\n",
+    "        ax1.legend(loc='upper left')\n",
+    "        \n",
+    "        if cYYYYDDDHHt == FD17[-18:-7]:\n",
+    "            ax2.set_title(f'GOES-17 ABI Band {bb} Day {mm}-{dd} {hh}:{t}0')\n",
+    "            ax2.set_ylabel('density (unitless)',fontsize = 16)\n",
+    "            ax2.set_xlabel('Temperature (K)', fontsize = 16)\n",
+    "            Tbox17 = Rad2BT(imageBox_17, planck_fk1_17, planck_fk2_17, planck_bc1_17, planck_bc2_17)\n",
+    "            ax2.hist(Tbox17.ravel(), bins = bins, density = True, label = 'Temp dist.')\n",
+    "            ax2.axvline(Tbox17.mean(), color='r',label = 'NOAA avg.')\n",
+    "            ax2.legend(loc='upper left')\n",
     "\n",
-    "#                 Tbox = Rad2BT(imageBox, planck_fk1, planck_fk2, planck_bc1, planck_bc2)\n",
-    "#                 ax.hist(Tbox.ravel(), bins = bins, density = True, label = 'Temp dist.')\n",
-    "#                 #ax.plot([T,T], [0,0.3],'r', label = 'something')\n",
-    "#                 ax.axvline(T, color='r',label = 'NOAA avg.')\n",
-    "#             axes[0].legend(loc='upper left')\n",
-    "#         fig.savefig('..'+ op.join(DATAPATH,f\"Histograms_filtered/G_{SS}_04-{str(8+dd).zfill(2)}-2019\"))\n",
+    "            '''ECDF'''\n",
+    "            xticks = [st.scoreatpercentile(xticks, p) for p in [0, 25, 50, 75, 100]]\n",
+    "            ax3.plot(sorted(G17), label='G17')\n",
+    "            ax3.plot(sorted(G16), label='G16')\n",
+    "            ax3.legend(loc = 'upper left')\n",
+    "            ax3.set_title(f'Empirical CDF for Apr-{day}-2019')\n",
+    "            ax3.set_xticks(xticks)\n",
+    "            ax3.set_xticklabels(plabels)\n",
+    "            ax3.set_xlabel('quantiles')\n",
+    "            ax3.set_ylabel('Temperature')\n",
+    "\n",
+    "            '''AUC'''\n",
+    "            rc= np.vstack([Tbox16.ravel(), Tbox17.ravel()])\n",
+    "            XY = rc[:,np.isfinite(rc).all(axis=0)]\n",
+    "            G16 = XY[0]\n",
+    "            G17 = XY[1]\n",
+    "\n",
+    "            _G17 = np.linspace(G17.min(), G17.max(), 1000)\n",
+    "            B = [st.scoreatpercentile(G16, st.percentileofscore(G17,g17s,\n",
+    "                kind='strict')) for g17s in _G17]\n",
+    "\n",
+    "            _B = (B - min(B))/(max(B) - min(B))\n",
+    "            _G17n = (_G17 - min(_G17))/(max(_G17) - min(_G17))\n",
+    "\n",
+    "            AUC = round(sum(_B)/1000,5)\n",
+    "            chart[ts] = AUC\n",
+    "            \n",
+    "            ax4.plot(_G17n,_B, label=f\"AUC: {AUC}\")\n",
+    "            ax4.set_ylabel('G16')\n",
+    "            ax4.set_xlabel('G17')\n",
+    "            ax4.set_title('Transform of G17 to G16')\n",
+    "            ax4.set_aspect('equal')\n",
+    "            ax4.legend(loc = 'upper left')\n",
     "        \n",
-    "        '''ECDF'''\n",
-    "        \n",
-    "        '''AUC'''\n",
+    "        #ax.plot([T,T], [0,0.3],'r', label = 'something')\n",
+    "        fig.savefig(op.join(storage,f\"GOES-R_B{bb}_{mm}-{dd}-20{yy}_{hh}{t}0\"))\n",
     "        \n",
     "#     times17, mean17 = getTmean('17', npPath, band, day)\n",
     "#     times16, mean16 = getTmean('16', npPath, band, day)\n",
@@ -345,75 +416,6 @@
     "\n",
     "\n",
     "#     _ = plt.savefig('..'+ op.join(DATAPATH,f\"Mean_temp_unfiltered/04-{str(8+j).zfill(2)}-2019\"))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "string = 'c20192220009464.nc'"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "18"
-      ]
-     },
-     "execution_count": 65,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(string)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'c20192220'"
-      ]
-     },
-     "execution_count": 69,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "string[-18:-9]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'c20192220009464.nc'"
-      ]
-     },
-     "execution_count": 70,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "string[:100]"
    ]
   },
   {
